...
                    app:dateFormat="@{album.releaseDate}"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    tools:text="1980/10/10" />

                <TextView
                    android:id="@+id/tracks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/encodesans"
                    app:layout_constraintStart_toStartOf="@+id/recordLabel"
...
                    android:textStyle="italic"
                    android:fontFamily="@font/encodesans"
                    android:textColor="@color/cardview_dark_background"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenre"
                    app:performersFromList="@{album.performers}"
                    tools:text="Performer name" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
...
